--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
-/* @import 'reset.css'; */
+@import 'reset.css';
 @import 'login.css';
 @import 'main.css';
 @import 'waka.css';
+@import 'todo.css';
 
 .hidden{
     display: none;
@@ -12,7 +13,16 @@
 }
 
 body{
-    background-color: #FEFFF1;
+    width: 100vw;
+    height: 100vh;
+
+    background-color: green;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+
 }
 
 .backgroundImg{
