--- a/css/todo.css
+++ b/css/todo.css
@@ -28,3 +28,11 @@
     opacity: 0.5;
     text-decoration: line-through;
 }
+
+li span{
+    background-color:blue;
+    display:inline-block;
+    width:300px;
+    overflow:hidden;
+    white-space:nowrap;
+}
