221023_chrome_app_clone_edit_todo

--- a/css/todo.css
+++ b/css/todo.css
@@ -30,7 +30,7 @@
 }
 
 li span{
-    background-color:blue;
+    background-color:grey;
     display:inline-block;
     width:300px;
     overflow:hidden;
