221023_chrome_app_clone-complete_basic

--- a/css/clock.css
+++ b/css/clock.css
@@ -1,17 +1,20 @@
 #clock{
-    font-size: 60px;
+    font-size: 40px;
     margin-bottom: 15px;
     
 }
 
 #weather{
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 15px;
 }
 
 #quote{
-    font-size: 30px;
-    margin-bottom: 15px;
-    opacity: 0.6;
+    background-color: transparent;
+    width: 600px;
+    height: 70px;
+    font-size: 15px;
+    opacity: 0.8;
+    color: whitesmoke;
     
 }
