--- a/css/googlesearch.css
+++ b/css/googlesearch.css
@@ -1,5 +1,5 @@
 #googlesearch {
-    margin: 20px 0 20px 0;
+    margin: 0px 0 20px 0;
     display:flex;
     align-items:center;
     justify-content: center;
@@ -14,9 +14,10 @@
     width: 90%;
     height: 100%;
     border: 0;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid white;
     font-size: 25px;
     padding: 0 10px 0 10px;
+    color: white;
 }
 
 
@@ -24,6 +25,7 @@
 
     background-color:transparent;
     border: 0;
+    color: white;
 
 }
 
